added presentation file

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -48,10 +48,6 @@
 
 \tableofcontents
 
-\begin{abstract}
-Abstract.
-\end{abstract}
-
 \section{Синтез 2-бензилиденциклопентанона.}
 \begin{center}
 \includegraphics[scale=0.5]{pictures/1.png}
@@ -60,9 +56,8 @@ Abstract.
 Затем раствор охлаждают до комнатной температуры и при перемешивании добавляют 43.5 мл 6М $\ce{HCl}$. После перемешивания в течение 2 часов органический слой отделяют и промывают водой до нейтрального pH, оставляют сушиться над $\ce{Na2SO4}$ на ночь. Затем смесь фильтруют и отгоняют бензол на роторном растворителе. Остаток представляет собой темное масло, которое кристаллизуется при затирании палочкой. Очистку производят перекристаллизацией из циклогексана. Выход: 44.75\%.\\
 Температура плавления очищенного вещества: $T_{melt.} = 62 - 63^{\circ}$С. $T_{melt.}^{lit.} = 60 - 62^{\circ}$C \cite{takeishi2004} \\
 Спектр ЯМР $^{1}$H ($\ce{CDCl3}$, 400 МГц, $\delta$ м.д., \textit{J} Гц):   2.02 (2H, квинт., \textit{J} = 7.8 Гц, H(1)), 2.40 (2H, т, \textit{J} = 7.8 Гц, H(2)), 2.97 (2H, дт, \textit{J} = 2.5 Гц, H(5)), 7.40 (4H, м, H(10),H(11),H(12),H(7)), 7.52 (2H, д, \textit{J} = 7.3 Гц, H(9), H(13)). 
-%\addcontentsline{toc}{section}{}
 
-\section{Синтез 2-бензилиден-5-(4-метоксибензолиден)циклопентанона.}
+\section{Синтез 2-бензилиден-5-(4-метоксибензилиден)циклопентанона.}
 \begin{center}
 \includegraphics[scale=0.35]{pictures/2.png}
 \end{center}
