--- a/Report/Presentation/presentation.tex
+++ b/Report/Presentation/presentation.tex
@@ -38,6 +38,7 @@
 %\usetheme{Szeged}
 %\usetheme{Warsaw}
 
+% handling unclear font error
 \pdfmapfile{+sansmathaccent.map}
 
 \title{Отчет}
@@ -130,7 +131,7 @@
 \begin{block}{Схема реакции}
 \includegraphics[scale=0.6]{../pictures/4.png}
 \end{block}
-\begin{block}{1}
+\begin{block}{}
 Выход: 2.32 г (34.89 $\%$). \\
 Температура плавления: T$_{melt.}$ = 181-184$^{\circ}$С, T$_{melt.}^{lit.}$ = 185$^{\circ}$C \ [4] \\
 \end{block}
@@ -142,9 +143,9 @@
 \end{block}
 \end{frame}
 
-\begin{frame}{2}
+\begin{frame}{Пробные реакции}
 \Fontvi
-\begin{block}{Пробные реакции}
+\begin{block}{}
 \includegraphics[scale=0.32]{../pictures/reac1.png} \\
 \includegraphics[scale=0.32]{../pictures/reac2.png}
 \end{block}
@@ -154,9 +155,9 @@
 Реагент & Растворитель & Щелочность \\
 \hline \hline
 4-(диэтиламино)бензальдегид & H$\textsubscript{2}$O : EtOH (1 : 1) & мин. кол-во KOH \\ \hline
-4-пиридинкарбальдегид & H$\textsubscript{2}$O : EtOH (1 : 3) &  KOH, 10 eq \\ \hline
 4-(диэтиламино)бензальдегид & CH$\textsubscript{3}$CN & Cs$\textsubscript{2}$CO$\textsubscript{3}$, 3 eq \\ \hline
 4-(диэтиламино)бензальдегид & ДМФА абс. & Cs$\textsubscript{2}$CO$\textsubscript{3}$, 1 eq \\ \hline
+4-пиридинкарбальдегид & H$\textsubscript{2}$O : EtOH (1 : 3) &  KOH, 10 eq \\ \hline
 \end{tabular}
 \end{table}
 \end{frame}
